--- a/package.json
+++ b/package.json
@@ -2,9 +2,10 @@
   "name": "platform-convert-bot",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "index.ts",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "tsx index.ts",
+    "test": "vitest run ."
   },
   "keywords": [],
   "author": "",
@@ -14,7 +15,8 @@
     "@discordjs/rest": "^2.4.3",
     "discord-api-types": "^0.37.119",
     "discord.js": "^14.18.0",
-    "dotenv": "^16.4.7"
+    "dotenv": "^16.4.7",
+    "tsx": "^4.19.3"
   },
   "devDependencies": {
     "@types/node": "^22.13.10",
