--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.ts",
   "scripts": {
     "start": "tsx index.ts",
-    "test": "vitest run ."
+    "test": "vitest run .",
+    "type-check": "tsc --noEmit"
   },
   "keywords": [],
   "author": "",
