--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "discord-api-types": "^0.37.119",
     "discord.js": "^14.18.0",
     "dotenv": "^16.4.7",
+    "pino": "^9.6.0",
+    "pino-pretty": "^13.0.0",
     "tsx": "^4.19.3"
   },
   "devDependencies": {
